--- a/style.css
+++ b/style.css
@@ -54,3 +54,16 @@
     bottom: 0;
     left: 50px;
 }
+/* about */
+.About {
+    text-align: center;
+    padding: 100px;
+}
+.About .section-title {
+    font-size: 3rem;
+    font-family: sans-serif;
+}
+.About .section-desc {
+font-size: 1.5rem;
+font-family: monospace;
+}
